--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <title>El Blog de Gabo</title>
+    <meta property="og:title" content="Entra en la pagina bro" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="entra en el link bro porfa" />
+    <meta property="og:url" content="delarosa1201.github.io/vamos-a-ver/" />
+    <meta property="og:image" content="277148.jpg" />
 </head>
 <body>
     <div class="hero"></div>
