--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="entra en el link bro porfa" />
     <meta property="og:url" content="delarosa1201.github.io/vamos-a-ver/" />
-    <meta property="og:image" content="277148.jpg" />
+    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoByJNAAhLkC7JLxhWBIPA06Bb0oTivHju8g&usqp=CAU" />
 </head>
 <body>
     <div class="hero"></div>
