--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
                         </div>
                     </h2>
                 </div>
-                    <p>Si tienes alguna pregunta escríbeme a  
-                        <a href="mailto:me@leonidasesteban.com">me@leonidasesteban.com</a>
+                    <p>pretale aqui mi rey que nos vamos pal correo xd  
+                        <a href="mailto:gabrieldelarosa2001@gmail.com">gabrieldelarosa2001@gmail.com</a>
                     </p>
                     <div class="section-content">
                         <h2>Ingresa a nuestro newsletter</h2>
