--- a/index.html
+++ b/index.html
@@ -197,13 +197,12 @@
                         <div class="slider">
                             <scroll-container class="slider-container">
                                 <scroll-page class="slider-slide" id="video1">
-                                    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/9aFp2znWqUA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </scroll-page>
+                                    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/Y-OhzQpsRwI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                                </scroll-page>
                                 <scroll-page class="slider-slide" id="video2">
-                                    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/myEMpG83bek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/z95mZVUcJ-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                 </scroll-page>
                                 <scroll-page class="slider-slide" id="video3">
-                                    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/A_g3lMcWVy0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/Y-OhzQpsRwI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                                </scroll-page>
                                 </scroll-page>
                             </scroll-container>
                             <div class="slider-bullet-list">
@@ -214,7 +213,7 @@
                         </div>
                     </h2>
                 </div>
-                    <p>pretale aqui mi rey que nos vamos pal correo xd  
+                    <p>Me pueden contactar mediante el correo  
                         <a href="mailto:gabrieldelarosa2001@gmail.com">gabrieldelarosa2001@gmail.com</a>
                     </p>
                     <div class="section-content">
